--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -16,7 +16,7 @@
 <body>
     <strong>Privacy Policy</strong>
     <p>
-        Sheqiao Zheng built the Suvega app as
+        Sheqiao Zheng built this app as
         a Commercial app. This SERVICE is provided by
         Sheqiao Zheng and is intended for use as
         is.
@@ -36,7 +36,7 @@
     <p>
         The terms used in this Privacy Policy have the same meanings
         as in our Terms and Conditions, which is accessible at
-        Suvega unless otherwise defined in this Privacy Policy.
+        this app unless otherwise defined in this Privacy Policy.
     </p>
     <p><strong>Information Collection and Use</strong></p>
     <p>
